<resources>
    <string name="app_name">我的蹤跡</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_to_record">開始軌跡</string>
    <string name="stop_to_record">停止錄製</string>
    <string name="permission">權限通知</string>
    <string name="is_open_notification">是否開啟定位權線呢?</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="channel_name">startRecord</string>
    <string name="description">已經開始了唷</string>
    <string name="edit_title">設定個人資料</string>
    <string name="nick_name">暱稱 :</string>
    <string name="enter_nickname">請輸入暱稱</string>
    <string name="sentence">座右銘 : </string>
    <string name="finish">完成</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article">貼文</string>
    <string name="friend">粉絲</string>
    <string name="edit_info">編輯個人檔案</string>
    <string name="catch_no_data">取不到任何資料</string>
    <string name="start_to_record_the_first_path">開始記錄你第一個路徑吧!</string>
    <string name="finish_record">完成錄製</string>
    <string name="record_path">錄製路徑提醒</string>
    <string name="notice">注意! 此功能將會每10秒抓取一次你的地理位置,並在背景執行,若要繼續執行請按\"確定\",並開始錄製路徑,若不同意請按取消退出,謝謝.</string>
    <string name="finish_notice">確定要停止錄製嗎?</string>
    <string name="description_place">描述一下你去哪裡吧~*</string>
    <string name="test">測試一</string>
    <string name="search">搜尋</string>
    <string name="information">訊息</string>
    <string name="set_public_confirm">是否將此筆路徑設成公開(所有人都看得見)</string>
    <string name="public_confirm">設成公開</string>
    <string name="is_recording">目前正在錄製中,如果退出此頁面,錄製將會取消唷...</string>
    <string name="confirm_to_logout">確認是否要登出?</string>
    <string name="upload_photo">上傳照片</string>
    <string name="upload_path">開啟記錄路徑</string>
    <string name="private_data">私人</string>
    <string name="finish_upload">完成編輯</string>
    <string name="public_data">公開</string>
    <string name="confirm_public_or_private">確認上傳資料要公開還是私人?</string>
    <string name="chasing">追蹤</string>
    <string name="reply_something">留下些甚麼吧~</string>
    <string name="chasing_info">發送追蹤請求給 Michael</string>
    <string name="send">發送</string>
    <string name="send_invite">追蹤起來!!</string>
    <string name="private_information">此為私人帳號.</string>
    <string name="send_invite_already">已發送追蹤邀請</string>
    <string name="rejected">拒絕</string>
    <string name="accept">接受</string>
    <string name="please_wait">請稍後</string>
    <string name="choose_to_login">請選擇下方登入方式↓</string>
    <string name="enter_sentence">請輸入你的座右銘</string>
    <string name="public_account">帳號設定 :</string>
    <string name="public_account_set">公開</string>
    <string name="edit_personal_info">修改個人資訊</string>
    <string name="say_something">說點甚麼吧...</string>
    <string name="my_message">訊息</string>
    <string name="no_information_heart">還沒有任何訊息,在等等吧..</string>
    <string name="heart_count">點讚的用戶</string>
    <string name="chasing_user">追蹤的用戶</string>
    <string name="fans_user">你的粉絲</string>
    <string name="no_message">目前還沒有人傳訊息給你唷~*</string>
    <string name="facebook_app_id">246821643259126</string>
    <string name="fb_login_protocol_scheme">fb246821643259126</string>
    <string name="login_fail">登入失敗</string>
    <string name="impeachment_report">APP檢舉信件</string>
    <string name="search_user">搜尋用戶</string>
    <string name="enter_email_or_nickname">輸入EMAIL或暱稱</string>
    <string name="already_chasing">已追蹤</string>
    <string name="search_no_user">沒有搜尋到此用戶唷~*</string>

</resources>
