<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".share_page.ShareActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/share_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/black_lite"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/share_toolbar_back"
            android:src="@drawable/back"
            android:layout_gravity="center|start"
            android:layout_width="@dimen/back_icon_size"
            android:layout_height="@dimen/back_icon_size"/>

        <TextView
            android:id="@+id/share_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_start_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_record_selector"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:text="@string/start_to_record"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_stop_record"
        app:layout_constraintTop_toBottomOf="@id/share_toolbar" />

    <Button
        android:id="@+id/btn_stop_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_record_selector"
        android:padding="10dp"
        android:text="@string/finish_record"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_start_record"
        app:layout_constraintTop_toBottomOf="@id/share_toolbar" />


    <com.google.android.gms.maps.MapView
        android:id="@+id/basic_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_map_height"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_start_record" />

    <EditText
        android:id="@+id/share_edit_content"
        android:hint="@string/description_place"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/basic_map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/normal_text_size"
        android:padding="10dp"
        android:background="@drawable/btn_record_not_press"
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>