<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".search_user_activity.SearchUserActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_user_toolbar"
        android:background="@color/black_lite"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageView
            android:layout_gravity="center|start"
            android:contentDescription="@null"
            android:id="@+id/search_user_toolbar_icon"
            android:src="@drawable/back"
            android:layout_width="@dimen/back_icon_size"
            android:layout_height="@dimen/back_icon_size"/>

        <TextView
            android:id="@+id/search_user_toolbar_title"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/toolbar_title_size"
            android:text="@string/search_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search_user_edit_email"
        app:layout_constraintTop_toBottomOf="@id/search_user_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:inputType="text"
        android:imeOptions="actionSearch"
        android:hint="@string/enter_email_or_nickname"
        android:padding="10dp"
        android:background="@drawable/btn_record_not_press"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_user_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/search_user_edit_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <ImageView
        android:contentDescription="@null"
        app:layout_constraintTop_toBottomOf="@id/search_user_edit_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100dp"
        android:visibility="gone"
        android:id="@+id/search_user_icon"
        android:src="@drawable/user_not_press"
        android:layout_width="@dimen/normal_icon_size"
        android:layout_height="@dimen/normal_icon_size"/>

    <TextView
        android:text="@string/search_no_user"
        android:id="@+id/search_user_info"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_user_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>






</androidx.constraintlayout.widget.ConstraintLayout>